@@ -3,6 +3,7 @@ package com.yanny.age.stone.proxy;
 import com.yanny.age.stone.blocks.*;
 import com.yanny.age.stone.client.renderer.*;
 import com.yanny.age.stone.entities.*;
+import com.yanny.age.stone.items.BackpackGui;
 import com.yanny.age.stone.subscribers.ContainerSubscriber;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.ScreenManager;
@@ -18,6 +19,7 @@ public class ClientProxy implements IProxy {
         ScreenManager.registerFactory(ContainerSubscriber.stone_chest, StoneChestGui::new);
         ScreenManager.registerFactory(ContainerSubscriber.feeder, FeederGui::new);
         ScreenManager.registerFactory(ContainerSubscriber.millstone, MillstoneGui::new);
+        ScreenManager.registerFactory(ContainerSubscriber.backpack, BackpackGui::new);
 
         RenderingRegistry.registerEntityRenderingHandler(DeerEntity.class, new DeerRenderer.RenderFactory());
         RenderingRegistry.registerEntityRenderingHandler(BoarEntity.class, new BoarRenderer.RenderFactory());
