@@ -1,6 +1,7 @@
 package com.yanny.age.stone.subscribers;
 
 import com.yanny.age.stone.Reference;
+import com.yanny.age.stone.items.BackpackItem;
 import com.yanny.ages.api.group.ModItemGroup;
 import net.minecraft.item.Food;
 import net.minecraft.item.Item;
@@ -32,6 +33,7 @@ public class ItemSubscriber {
     public static final Item mammoth_tusk = null;
     public static final Item rhino_tusk = null;
     public static final Item saber_teeth = null;
+    public static final Item backpack = null;
 
     private static final Food VENISON = (new Food.Builder()).hunger(3).saturation(0.3f).meat().build();
     private static final Food COOKED_VENISON = (new Food.Builder()).hunger(8).saturation(0.8f).meat().build();
@@ -57,5 +59,6 @@ public class ItemSubscriber {
         registry.register(new Item(new Item.Properties().group(ModItemGroup.AGES).maxStackSize(64)).setRegistryName(MODID, "mammoth_tusk"));
         registry.register(new Item(new Item.Properties().group(ModItemGroup.AGES).maxStackSize(64)).setRegistryName(MODID, "rhino_tusk"));
         registry.register(new Item(new Item.Properties().group(ModItemGroup.AGES).maxStackSize(64)).setRegistryName(MODID, "saber_teeth"));
+        registry.register(new BackpackItem().setRegistryName(MODID, "backpack"));
     }
 }
