@@ -1,0 +1,28 @@
+{
+  "type": "stone_age:flint_workbench",
+  "pattern": [
+    "GBG",
+    "SLS",
+    "GMG"
+  ],
+  "key": {
+    "G": {
+      "item": "minecraft:leather"
+    },
+    "L": {
+      "item": "minecraft:lead"
+    },
+    "B": {
+      "item": "stone_age:fish_bone"
+    },
+    "S": {
+      "item": "stone_age:saber_teeth"
+    },
+    "M": {
+      "item": "stone_age:mammoth_tusk"
+    }
+  },
+  "result": {
+    "item": "stone_age:backpack"
+  }
+}
